# aft

./: package.json  pyproject.toml
.github/workflows/: aft-ci-gate.yml  aft-quality.yml
config/: default.yaml
src/aft/: cli.py
src/aft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/aft/alert/: __init__.py  ci_gate.py  conditions.py  dispatcher.py
src/aft/alert/channels/: feishu.py  slack.py
src/aft/cli/: __init__.py  __main__.py  github.py  router.py
src/aft/cli/analyzers/: __init__.py  content.py  rule.py  utils.py
src/aft/cli/parsers/: __init__.py  lint.py
src/aft/engine/: tester.py
src/aft/github_app/: app.py  comments.py
src/aft/llm/: client.py
src/aft/observability/: __init__.py  comments.py  coverage.py  store.py  trends.py  types.py
src/aft/policy/: parser.py  test_builder.py
src/aft/report/: __init__.py  generator.py
src/github-app/: index.js
tests/integration/: test_alert_e2e.py  test_observability_e2e.py  test_post_comment_e2e.py  test_pr_flow.py
tests/unit/: test_alert_conditions.py  test_alert_dispatcher.py  test_builder.py  test_ci_gate.py  test_cli.py  test_client.py  test_diff_router.py  test_feishu_notifier.py  test_github_poster.py  test_lint_parser.py  test_observability_comments.py  test_observability_coverage.py  test_observability_store.py  test_observability_trends.py  test_observability_types.py  test_parser.py  test_post_comment_command.py  test_prompts.py  test_pytest_plugin.py  test_report_generator.py  test_skill_content_analyzer.py  test_skill_rule_analyzer.py  test_slack_notifier.py
(+9 files in other folders)
