[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aft"
version = "0.1.0"
description = "Agent For Testing - AI Native Testing Engine"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.18.0",
    "pyyaml>=6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
